--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "require": {
         "php": "^7.4.0",
         "ext-phar": "*",
-        "composer/semver": "^1.5",
+        "composer/semver": "^1.5.0",
+        "psr/log": "^1.1.0",
         "seld/phar-utils": "^1.1.0",
         "symfony/console": "^5.0.0",
         "symfony/finder": "^5.0.0",
