Make compatible with PHP 8

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "bin/releaser"
     ],
     "require": {
-        "php": "^7.4.0",
+        "php": "^7.4.0 || ^8.0.0",
         "ext-ctype": "*",
         "ext-json": "*",
         "ext-phar": "*",
